apps/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: kavita-data-claim
      securityContext:
        runAsUser: 1993
        runAsGroup: 1993
      containers:
      - name: app
        image: ghcr.io/kareadita/kavita:latest@sha256:31181a32f0dda73cae68721867028a7253d57881b58bea5754cd9e578e75421a
        volumeMounts:
        - name: data
          mountPath: /kavita/config
          subPath: config
        - name: data
          mountPath: /library
          subPath: library
        ports:
        - containerPort: 5000
        startupProbe:
          httpGet:
            path: /api/Health
            port: 5000
          failureThreshold: 12  # 12 * 10s = 2 minutes startup leeway
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/Health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
