apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: kavita
  ports:
  - port: 80
    targetPort: 5000
